k8s/apps/tools/stirling-pdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Stirling PDF"
    gethomepage.dev/description: "PDF manipulation tools"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "stirling-pdf.png"
    gethomepage.dev/href: "https://stirling-pdf.item.fyi"
    gethomepage.dev/siteMonitor: "https://stirling-pdf.item.fyi"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=stirling-pdf"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`stirling-pdf.item.fyi`)
      services:
        - name: stirling-pdf
          port: 80
  tls: {}
